--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ language: perl
 perl: "5.18"
 
 before_install:
-    - cpanm Test::Unit::Debug # optional dependency
+    - cpanm --force Test::Unit::Debug # optional dependency
